--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <h2>Desert Pizza</h2>
     <img src="../images/pizzagood.png" alt="an image of dessert pizza" height="100" width="200">
     <p><a href="dessert-pizza.html">Recipe</a></p>
-    <h2>another recipe</h2>
-    
+    <h2>Spaghetti</h2>
+    <img src="../images/spaghettigood.png" alt="an image of dessert pizza" height="100" width="200">
+    <p><a href="Spaghetti.html">Recipe</a></p>
+	<h2>Another recipe</h2>
 	</body>
 </html>
