added mozzarela sticks :D

--- a/dessert-pizza.html
+++ b/dessert-pizza.html
@@ -25,7 +25,7 @@
         <li>Put your dough on the pan.</li>
         <li>cook the dough for 10 minutes.</li>
         <li>After that, take the non-white chocolate, and put it around the middle of the pan.</li>
-        <li>Cook until the cohocoate is melted.</li>
+        <li>Cook until the chocolate is melted.</li>
         <li>Let stand until the chocolate hardens.</li>
         <li>Melt white chocolate until it is a liquid.</li>
         <li>Drizzle white chocolate, and put toppings on.</li>
