--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
 	</head>
 	<body>
 	<h1>My recipes</h1>
-    <p>Here are some recipes for deliciousness, and I MADE THEM!</p>
+    <p>Here are some recipes for deliciousness, and I MADE THEM! (ok maybe only one)</p>
     <h2>Desert Pizza</h2>
     <img src="../images/pizzagood.png" alt="an image of dessert pizza" height="100" width="200">
     <p><a href="dessert-pizza.html">Recipe</a></p>
     <h2>Spaghetti</h2>
-    <img src="../images/spaghettigood.png" alt="an image of dessert pizza" height="100" width="200">
-    <p><a href="Spaghetti.html">Recipe</a></p>
-	<h2>Another recipe</h2>
+    <img src="../images/Spaghettigood.png" alt="an image of spaghetti" height="150" width="150">
+    <p><a href="spaghetti.html">Recipe</a></p>
+	<h2>Mozzarella sticks</h2>
+	<img src="../images/m-sticks.png" alt="an image of mozzarella sticks" height="150" width="150">
+    <p><a href="m-sticks.html">Recipe</a></p>
 	</body>
 </html>
