--- a/spaghetti.html
+++ b/spaghetti.html
@@ -6,12 +6,12 @@
 	</head>
 	<body>
         <h1>How to make a dessert pizza</h1>
-        <img src="../images/spaghettigood.png" alt="an image of spaghetti" height="150" width="150">
+        <img src="../images/Spaghettigood.png" alt="an image of spaghetti" height="150" width="150">
 	<h2>Materials needed</h2>
     <p>
         <ul>
             <li>Spaghetti Noodles</li>
-            <li>Toamto sauce</li>
+            <li>Tomato sauce</li>
             <li>Ground beef</li>
             <li>A stovetop</li>
             <li>A pot</li>
